Adding display screen and first button

--- a/index.html
+++ b/index.html
@@ -5,11 +5,17 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
     <title>Calculator</title>
+    <link rel="stylesheet" href="style.css">
   </head>
   <body>
-    <p>This paragraph is a part of HTML.</p>
-    <nav id="navigation"></nav>
-    <p>This paragraph is also a part of HTML.</p>
+        <div id="calculator">
+            <input id="displayScreen" readonly>
+            <div id="buttons">
+                <button onclick="appendToDisplay('+')">+</button>
+
+            </div>
+
+        </div>
     <script src="index.js"></script>
   </body>
 </html>
